# calc

./: CMakeLists.txt  README.md
calc/: CMakeLists.txt  calc.cpp  calc.h
